OpenGl Depth Picking not selecting the front-most object #76541

Closed
opened 2020-05-08 12:46:42 +02:00 by Pasang Bomjan · 19 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Broken:
2.90 (sub 0), branch: master, commit date: 2020-05-10 13:42, hash: 51ac411ce8
2.83 (sub 15), branch: master, commit date: 2020-05-06 16:18, hash: 9605c26166
Worked:
2.83 (sub 13), branch: master, commit date: 2020-04-08 21:23, hash: 1239cab11f

Short description of error
OpenGl Depth Picking is having issues when selecting the front-most object.

With that checked, it is expected that the red block will be selected first. But the innermost block is selected first.
When you uncheck it, the red box is selected on first click.

Open the given example file, In the left viewport, select-drag the red rectangle. You can see the innermost rectangle being translated instead. This happens both in orthographic and perspective views.

It works if I remove the mirror modifier.

Screenshot.png
OpenGL depth pick bug.mp4
OpenGL depth pick bug.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Broken:** 2.90 (sub 0), branch: master, commit date: 2020-05-10 13:42, hash: `51ac411ce8` 2.83 (sub 15), branch: master, commit date: 2020-05-06 16:18, hash: `9605c26166` **Worked:** 2.83 (sub 13), branch: master, commit date: 2020-04-08 21:23, hash: `1239cab11f` **Short description of error** OpenGl Depth Picking is having issues when selecting the front-most object. With that *checked*, it is expected that the red block will be selected first. But the innermost block is selected first. When you uncheck it, the red box is selected on first click. Open the given example file, In the left viewport, select-drag the red rectangle. You can see the innermost rectangle being translated instead. This happens both in orthographic and perspective views. It works if I remove the mirror modifier. ![Screenshot.png](https://archive.blender.org/developer/F8520431/Screenshot.png) [OpenGL depth pick bug.mp4](https://archive.blender.org/developer/F8527243/OpenGL_depth_pick_bug.mp4) [OpenGL depth pick bug.blend](https://archive.blender.org/developer/F8520424/OpenGL_depth_pick_bug.blend)
Author

Added subscriber: @Pasang

Added subscriber: @Pasang
Pasang Bomjan changed title from OpenGl Deapth Picking broken in orthographic view to OpenGl Depth Picking broken in orthographic view 2020-05-08 12:49:40 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Should be fixed already, was reported before, see #75958 (Blender Crashes when an Object is selected after unchecking OpenGL Depth Picking), will merge these reports...

Should be fixed already, was reported before, see #75958 (Blender Crashes when an Object is selected after unchecking OpenGL Depth Picking), will merge these reports...
Member

Closed as duplicate of #75958

Closed as duplicate of #75958
Author

@lichtwerk, This is not the same bug as #75958. Please reopen the task.

@lichtwerk, This is not the same bug as #75958. Please reopen the task.
Member

Changed status from 'Duplicate' to: 'Needs Triage'

Changed status from 'Duplicate' to: 'Needs Triage'
Member

Sorry about this

Sorry about this
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

I don't understand, only the red ones move:
Screenshot 2020-05-10 at 18.24.39.png

I don't understand, only the red ones move: ![Screenshot 2020-05-10 at 18.24.39.png](https://archive.blender.org/developer/F8526251/Screenshot_2020-05-10_at_18.24.39.png)
Author

@ankitm, I've updated the task description with a video of what I mean.

@ankitm, I've updated the task description with a video of what I mean.
Member

If you keep clicking on the overlapping blocks, it'll cycle through all the objects under that dot. Then you can move the correct object.
It would've been a bug if the red block was selected & upon moving, the black one moved.

If you keep clicking on the overlapping blocks, it'll cycle through all the objects under that dot. Then you can move the correct object. It would've been a bug if the red block was selected & upon moving, the black one moved.
Author

If you keep clicking on the overlapping blocks, it'll cycle through all the objects under that dot.

I moved the mouse away and deselected after every selection. So it should not cycle through the objects. The bug in the first place is that it doesn't select the front-most object.
If I turn of Depth Picking from the preferences, it works. It also works when I turn off the y-mirror for the red block.

REC.mp4

>If you keep clicking on the overlapping blocks, it'll cycle through all the objects under that dot. I moved the mouse away and deselected after every selection. So it should not cycle through the objects. The bug in the first place is that it doesn't select the front-most object. If I turn of Depth Picking from the preferences, it works. It also works when I turn off the y-mirror for the red block. [REC.mp4](https://archive.blender.org/developer/F8527353/REC.mp4)
Ankit Meel changed title from OpenGl Depth Picking broken in orthographic view to OpenGl Depth Picking not selecting frontmost object in orthographic view 2020-05-11 13:40:34 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sebastian Parborg self-assigned this 2020-05-12 15:59:04 +02:00

I'm currently looking into this. It seems to be a bug in the GPU selection mode GPU_SELECT_PICK_ALL.
If I instead force GPU_SELECT_PICK_NEAREST it works (but will not cycle through the selections anymore of course).

I can also reproduce this in perspective mode with certain angles. So this is not limited to orthographic mode.

I'm currently looking into this. It seems to be a bug in the GPU selection mode `GPU_SELECT_PICK_ALL`. If I instead force `GPU_SELECT_PICK_NEAREST` it works (but will not cycle through the selections anymore of course). I can also reproduce this in perspective mode with certain angles. So this is not limited to orthographic mode.

I've proposed a potential fix here: https://developer.blender.org/D7710

I've proposed a potential fix here: https://developer.blender.org/D7710
Pasang Bomjan changed title from OpenGl Depth Picking not selecting frontmost object in orthographic view to OpenGl Depth Picking not selecting the front-most object 2020-05-12 19:47:24 +02:00

This issue was referenced by 82bda82ec4

This issue was referenced by 82bda82ec4494717f3796a8b458c81a98836838b

This issue was referenced by 36d9f7e375

This issue was referenced by 36d9f7e37540d211add476178972e1617c1533a2

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76541
No description provided.